--- a/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews.html
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>资讯6彩</title>
+    <title>六开彩开奖现场直播_天下彩_天空彩票与你同行_小鱼儿玄机2站_白小姐中特网_管家婆彩图_118图库_香港马会资料</title>
     <style type="text/css">
         /*初始化开始*/
         body, v, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, p, blockquote, th, td {
