--- a/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews.html
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews.html
@@ -760,7 +760,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="http://c8-public.oss-cn-shenzhen.aliyuncs.com/c8/res/js/jquery.js"></script>
+    <script type="text/javascript" src="https://c8-public.oss-cn-shenzhen.aliyuncs.com/c8/res/js/jquery.js"></script>
 
     <script type="text/javascript">
         $(function () {
