--- a/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews.html
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews.html
@@ -829,8 +829,7 @@
         });
 
         $(function () {
-           // var url = "wss://socket.c8.cn:8084/LhcHandler.ashx";
-            var url = "ws://119.147.139.131:8801/LhcHandler.ashx";
+            var url = "wss://socket.c8.cn:8084/LhcHandler.ashx";
 
             ws = new WebSocket(url);
             //链接成功回调
