--- a/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews.html
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews.html
@@ -525,7 +525,7 @@
 <body style="background:#F4F4F5;">
 
     <header class="hjc_header">
-        <a href="javascript:;" class="hjc_back"></a>
+        <a href="javascript:history.go(-1);" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo hjc_HeaderXL">6彩<span class="select_sign"></span></a>
         <a href="javascript:;" class="ZX_Sidebar"></a>
     </header>
@@ -537,7 +537,7 @@
                 <li data-id="2"><a href="/News/NewIndex/2">双色球</a></li>
                 <li data-id="3"><a href="/News/NewIndex/3">七星彩</a></li>
                 <li data-id="4"><a href="/News/NewIndex/4">大乐透</a></li>
-                <li class="current" data-id="5"><a href="/News/TypeList/5">6彩</a></li>
+                <li class="current" data-id="5"><a href="javascript:;">6彩</a></li>
                 <li data-id="6"><a href="/News/NewIndex/6">排列3</a></li>
                 <li data-id="7"><a href="/News/NewIndex/7">排列5</a></li>
                 <li data-id="8"><a href="/News/NewIndex/8">七乐彩</a></li>
