--- a/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews.html
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews.html
@@ -1012,7 +1012,7 @@
                         else {
                             openSpan.html('正在开奖');
 
-                            setTimeout(function () { getTimeBylType() },  15000);
+                            setTimeout(function () { getTimeBylType() },  2*60*1000);
                         }
                     }
                 }
