--- a/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews - 副本.html
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews - 副本.html
@@ -518,6 +518,94 @@
             filter: alpha(opacity=0);
             z-index: 999
         }
+
+        /*5种广告页面*/
+        .GG_Box {
+            padding: 10px;
+            border-bottom: 1px solid #f3f4f4;
+        }
+
+            .GG_Box a {
+                display: block;
+                overflow: hidden;
+            }
+
+        .GG_B1Tit {
+            font-size: 14px;
+            color: #333;
+            font-weight: normal;
+            margin-bottom: 10px;
+        }
+
+        .GG_BbtFont {
+            line-height: 19px;
+            margin-top: 10px;
+        }
+
+            .GG_BbtFont b {
+                font-weight: normal;
+                color: #999;
+                font-size: 12px;
+                padding: 0 5px;
+                border: 1px solid #999;
+                border-radius: 3px;
+            }
+
+            .GG_BbtFont span {
+                font-size: 12px;
+                color: #999;
+                margin-left: 5px;
+            }
+
+        .GG_B2Left {
+            width: 70%;
+        }
+
+        .GG_B2Right {
+            margin-left: 72%;
+            height: 75px;
+        }
+
+            .GG_B2Right img {
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
+
+        .GG_B3Tu {
+            margin-top: 10px;
+        }
+
+            .GG_B3Tu li {
+                float: left;
+                width: 33.3333%;
+                padding: 5px 10px;
+                height: 70px;
+                box-sizing: border-box;
+            }
+
+                .GG_B3Tu li img {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                }
+
+        .GG_B4Tu {
+            margin-top: 10px;
+            height: 160px;
+        }
+
+            .GG_B4Tu img {
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
+
+        .GG_B5Tu {
+            height: 35px;
+            display: block;
+            width: 100%;
+        }
     </style>
 
 </head>
@@ -607,6 +695,19 @@
     </div>
 
     <div class="info_LHC_category col4" style="overflow:hidden;">
+        <div class="GG_Box">
+            <a href="http://2535.cc/?id=xiong">
+                <h3 class="GG_B1Tit">
+                    北京pk10,时时彩赔1.982,提款快.送2000免费试玩
+                </h3>
+
+                <div class="newstime">
+                    <span>万彩吧</span>
+                    <span>1-25 09:36</span>
+                    <span>5<i class="icon-comment"></i></span>
+                </div>
+            </a>
+        </div>
         <dl>
             <dt><p><span class="spec"></span>香港正版图库</p></dt>
             <dd><a href="/News/NewIndex/5/111">看图解码</a></dd>
