--- a/C8.Lottery.Portal/C8.Lottery.Portal/hk6/202.html
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/hk6/202.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>万彩吧_快3_11选5_快乐10分_3d_彩票开奖查询</title>
-    <meta name="keywords" content="万彩吧_快3_11选5_快乐10分_3d_彩票开奖查询">
-    <meta name="description" content="万彩吧_快3_11选5_快乐10分_3d_彩票开奖查询">
+    <title>六开彩开奖现场直播_天下彩_天空彩票与你同行_小鱼儿玄机2站_白小姐中特网_管家婆彩图_118图库_香港马会资料</title>
+    <meta name="keywords" content="六开彩开奖现场直播_天下彩_天空彩票与你同行_小鱼儿玄机2站_白小姐中特网_管家婆彩图_118图库_香港马会资料">
+    <meta name="description" content="六开彩开奖现场直播_天下彩_天空彩票与你同行_小鱼儿玄机2站_白小姐中特网_管家婆彩图_118图库_香港马会资料">
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <script>
-        location.href = '/News/TypeList/5';
+        location.href = '/lhcNews.html';
     </script>
 </head>
 <body>
