--- a/C8.Lottery.Portal/C8.Lottery.Portal/hk6/202.html
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/hk6/202.html
@@ -8,7 +8,7 @@
     <meta name="description" content="六开彩开奖现场直播_天下彩_天空彩票与你同行_小鱼儿玄机2站_白小姐中特网_管家婆彩图_118图库_香港马会资料">
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <script>
-        location.href = '/lhcNews.html';
+        location.href = '/lhcNews.html?v=1';
     </script>
 </head>
 <body>
