--- a/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews - 副本.html
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews - 副本.html
@@ -880,6 +880,10 @@
         var t1;
 
         $(function () {
+            if (IsPC()) {
+                $(".GG_Box").hide();
+            }
+
             $.ajax({
                 type: "get",
                 data: {},
@@ -1124,6 +1128,21 @@
             $.post('/home/GetRemainOpenTimeToLhc', { }, function (data) {
                 $("#openTime").html(data);
             });
+        }
+
+        function IsPC() {
+            var userAgentInfo = navigator.userAgent;
+            var Agents = ["Android", "iPhone",
+                "SymbianOS", "Windows Phone",
+                "iPad", "iPod"];
+            var flag = true;
+            for (var v = 0; v < Agents.length; v++) {
+                if (userAgentInfo.indexOf(Agents[v]) > 0) {
+                    flag = false;
+                    break;
+                }
+            }
+            return flag;
         }
     </script>
 </body>
