--- a/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews - 副本.html
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/lhcNews - 副本.html
@@ -695,13 +695,13 @@
     </div>
 
     <div class="info_LHC_category col4" style="overflow:hidden;">
-        <div class="GG_Box">
+        <!--<div class="GG_Box">
             <a href="http://2535.cc/?id=xiong">
                 <h3 class="GG_B1Tit">
                     北京pk10,时时彩赔1.982,提款快.送2000免费试玩
                 </h3>
             </a>
-        </div>
+        </div>-->
         <dl>
             <dt><p><span class="spec"></span>香港正版图库</p></dt>
             <dd><a href="/News/NewIndex/5/111">看图解码</a></dd>
